--- a/test-output/old/Default suite/reporter-output.html
+++ b/test-output/old/Default suite/reporter-output.html
@@ -1,5 +1,4 @@
-<h2>Reporter output</h2><table><tr><td>Successfully Retrieved the LIST_ALL_CUSTOMERS Response</td></tr>
-<tr><td>Successfully Retrieved the CUSTOMERDETAILS-1 Response</td></tr>
+<h2>Reporter output</h2><table><tr><td>Successfully Retrieved the CUSTOMERDETAILS-1 Response</td></tr>
 <tr><td>Successfully Retrieved the CUSTOMERDETAILS-2 Response</td></tr>
 <tr><td>Successfully Retrieved the CUSTOMERDETAILS-3 Response</td></tr>
 <tr><td>Successfully Retrieved the CUSTOMERDETAILS-4 Response</td></tr>
