--- a/test-output/index.html
+++ b/test-output/index.html
@@ -26,7 +26,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -40,7 +40,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Default_suite" class="navigator-link">
-              <span class="suite-name border-passed">Default suite</span>
+              <span class="suite-name border-failed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\diptee.nanda\AppData\Local\Temp\testng-eclipse-826057388\testng-customsuite.xml</span>
+                    <span>C:\Users\diptee.nanda\AppData\Local\Temp\testng-eclipse--608387580\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">8 methods,   8 passed</span>
+                    <span class="method-stats">8 methods, 1 failed,   7 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
+                    </span>
+                    <div class="method-list-content failed suite-Default_suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.qa.test.AutomateApiUsingRestassured" class="method navigator-link" hash-for-method="ListsAllCustomerDetails">ListsAllCustomerDetails</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Default_suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -137,11 +151,6 @@
                         <a href="#" panel-name="suite-Default_suite" title="com.qa.test.AutomateApiUsingRestassured" class="method navigator-link" hash-for-method="CustomerDetailsNotFound">CustomerDetailsNotFound</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.qa.test.AutomateApiUsingRestassured" class="method navigator-link" hash-for-method="ListsAllCustomerDetails">ListsAllCustomerDetails</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
@@ -154,6 +163,58 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
+          <div class="suite-Default_suite-class-failed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="failed.png"/>
+              <span class="class-name">com.qa.test.AutomateApiUsingRestassured</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="ListsAllCustomerDetails">
+                  </a> <!-- ListsAllCustomerDetails -->
+                  <span class="method-name">ListsAllCustomerDetails</span>
+                  <div class="stack-trace">java.lang.AssertionError: correct status code returned expected [200] but found [404]
+	at org.testng.Assert.fail(Assert.java:99)
+	at org.testng.Assert.failNotEquals(Assert.java:1037)
+	at org.testng.Assert.assertEqualsImpl(Assert.java:140)
+	at org.testng.Assert.assertEquals(Assert.java:122)
+	at org.testng.Assert.assertEquals(Assert.java:907)
+	at com.qa.test.AutomateApiUsingRestassured.ListsAllCustomerDetails(AutomateApiUsingRestassured.java:109)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:566)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
+	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
+	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
+	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
+	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
+	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
+	at org.testng.TestRunner.privateRun(TestRunner.java:794)
+	at org.testng.TestRunner.run(TestRunner.java:596)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:377)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:371)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:332)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:276)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1212)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1134)
+	at org.testng.TestNG.runSuites(TestNG.java:1063)
+	at org.testng.TestNG.run(TestNG.java:1031)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+
+</div> <!-- stack-trace -->
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-failed -->
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -209,19 +270,12 @@
                   <span class="method-name">CustomerDetailsNotFound</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="ListsAllCustomerDetails">
-                  </a> <!-- ListsAllCustomerDetails -->
-                  <span class="method-name">ListsAllCustomerDetails</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\diptee.nanda\AppData\Local\Temp\testng-eclipse-826057388\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\diptee.nanda\AppData\Local\Temp\testng-eclipse--608387580\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -274,35 +328,35 @@ data.addRows(8);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'ListsAllCustomerDetails')
 data.setCell(0, 2, 'com.qa.test.AutomateApiUsingRestassured')
-data.setCell(0, 3, 1780);
+data.setCell(0, 3, 1729);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'CustomerDetailsFound3')
+data.setCell(1, 1, 'CustomerDetailsFound1')
 data.setCell(1, 2, 'com.qa.test.AutomateApiUsingRestassured')
-data.setCell(1, 3, 25);
+data.setCell(1, 3, 61);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'CustomerDetailsNotFound')
 data.setCell(2, 2, 'com.qa.test.AutomateApiUsingRestassured')
-data.setCell(2, 3, 20);
+data.setCell(2, 3, 24);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'CustomerDetailsFound2')
 data.setCell(3, 2, 'com.qa.test.AutomateApiUsingRestassured')
-data.setCell(3, 3, 16);
+data.setCell(3, 3, 22);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'CustomerDetailsFound1')
+data.setCell(4, 1, 'CustomerDetailsFound3')
 data.setCell(4, 2, 'com.qa.test.AutomateApiUsingRestassured')
-data.setCell(4, 3, 16);
+data.setCell(4, 3, 18);
 data.setCell(5, 0, 5)
-data.setCell(5, 1, 'CustomerDetailsFound6')
+data.setCell(5, 1, 'CustomerDetailsFound5')
 data.setCell(5, 2, 'com.qa.test.AutomateApiUsingRestassured')
 data.setCell(5, 3, 15);
 data.setCell(6, 0, 6)
-data.setCell(6, 1, 'CustomerDetailsFound4')
+data.setCell(6, 1, 'CustomerDetailsFound6')
 data.setCell(6, 2, 'com.qa.test.AutomateApiUsingRestassured')
 data.setCell(6, 3, 14);
 data.setCell(7, 0, 7)
-data.setCell(7, 1, 'CustomerDetailsFound5')
+data.setCell(7, 1, 'CustomerDetailsFound4')
 data.setCell(7, 2, 'com.qa.test.AutomateApiUsingRestassured')
-data.setCell(7, 3, 12);
+data.setCell(7, 3, 13);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -319,21 +373,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">ListsAllCustomerDetails</span>
+              <span class="reporter-method-name">CustomerDetailsFound4</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Successfully Retrieved the LIST_ALL_CUSTOMERS Response</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">CustomerDetailsFound2</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Successfully Retrieved the CUSTOMERDETAILS-2 Response</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">CustomerDetailsFound3</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Successfully Retrieved the CUSTOMERDETAILS-3 Response</span>
+                <span class="reporter-method-output">Successfully Retrieved the CUSTOMERDETAILS-4 Response</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
@@ -349,21 +391,27 @@ return data;
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
-              <span class="reporter-method-name">CustomerDetailsNotFound</span>
+              <span class="reporter-method-name">CustomerDetailsFound3</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Successfully checked the ERROR Scenario CustomerDetailsNotFound</span>
-              </div> <!-- reporter-method-output-div -->
-            </div> <!-- reporter-method-div -->
-            <div class="reporter-method-div">
-              <span class="reporter-method-name">CustomerDetailsFound4</span>
-              <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Successfully Retrieved the CUSTOMERDETAILS-4 Response</span>
+                <span class="reporter-method-output">Successfully Retrieved the CUSTOMERDETAILS-3 Response</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
             <div class="reporter-method-div">
               <span class="reporter-method-name">CustomerDetailsFound5</span>
               <div class="reporter-method-output-div">
                 <span class="reporter-method-output">Successfully Retrieved the CUSTOMERDETAILS-5 Response</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">CustomerDetailsNotFound</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Successfully checked the ERROR Scenario CustomerDetailsNotFound</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">CustomerDetailsFound2</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">Successfully Retrieved the CUSTOMERDETAILS-2 Response</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -387,64 +435,66 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">ListsAllCustomerDetails</span>
-                <span class="method-start">109 ms</span>
+                <span class="method-start">131 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">1896 ms</span>
+                <span class="method-start">1868 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">CustomerDetailsFound1</span>
-                <span class="method-start">1903 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method before">
-                <span class="method-name">setup</span>
-                <span class="method-start">1921 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">CustomerDetailsFound2</span>
-                <span class="method-start">1926 ms</span>
+                <span class="method-start">1882 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
                 <span class="method-start">1944 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">CustomerDetailsFound3</span>
+                <span class="method-name">CustomerDetailsFound2</span>
                 <span class="method-start">1950 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">1977 ms</span>
+                <span class="method-start">1973 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">CustomerDetailsFound3</span>
+                <span class="method-start">1981 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">setup</span>
+                <span class="method-start">2001 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">CustomerDetailsFound4</span>
-                <span class="method-start">1982 ms</span>
+                <span class="method-start">2008 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">1998 ms</span>
+                <span class="method-start">2022 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">CustomerDetailsFound5</span>
-                <span class="method-start">2004 ms</span>
+                <span class="method-start">2028 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">2017 ms</span>
+                <span class="method-start">2044 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">CustomerDetailsFound6</span>
-                <span class="method-start">2022 ms</span>
+                <span class="method-start">2050 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method before">
                 <span class="method-name">setup</span>
-                <span class="method-start">2038 ms</span>
+                <span class="method-start">2066 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">CustomerDetailsNotFound</span>
-                <span class="method-start">2047 ms</span>
+                <span class="method-start">2072 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
